// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPrompt renders a post prompt 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "k2ndek",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "k2ndek",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PostPrompt
      firstName="Arturo"
      type="project"
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <Link
          to="/all/create/post?newPostType=project"
        >
          <LinkAnchor
            href="/all/create/post?newPostType=project"
            navigate={[Function]}
          >
            <a
              href="/all/create/post?newPostType=project"
              onClick={[Function]}
            >
              <div
                className="post-prompt"
                data-stylename="postPrompt"
              >
                <RoundImage
                  data-stylename="prompt-image"
                  small={true}
                >
                  <div
                    data-stylename="image small"
                    style={Object {}}
                  />
                </RoundImage>
                Hi {{firstName}}, what would you like to create?
              </div>
            </a>
          </LinkAnchor>
        </Link>
        <div
          data-stylename="shadow"
        />
      </div>
    </PostPrompt>
  </Router>
</MemoryRouter>
`;

exports[`matches the snapshot for an orphan user 1`] = `
<StreamBanner
  all={true}
  currentUser={
    Object {
      "avatarUrl": "me.png",
      "firstName": [Function],
      "memberships": Object {
        "count": [Function],
      },
    }
  }
  currentUserHasMemberships={false}
/>
`;

exports[`renders for all groups 1`] = `
<StreamBanner
  all={true}
  currentUser={
    Object {
      "avatarUrl": "me.png",
      "firstName": [Function],
      "memberships": Object {
        "count": [Function],
      },
    }
  }
  currentUserHasMemberships={true}
/>
`;

exports[`renders with a group 1`] = `
<StreamBanner
  group={
    Object {
      "avatarUrl": "avatar.png",
      "bannerUrl": "banner.png",
      "location": "space, duh",
      "name": "Spacebase",
    }
  }
  isTesting={true}
>
  <div
    data-stylename="banner"
  >
    <div
      data-stylename="image"
      style={
        Object {
          "backgroundImage": "url(banner.png)",
        }
      }
    >
      <div
        data-stylename="fade"
      >
        <div
          data-stylename="fade2"
        />
      </div>
      <div
        data-stylename="header"
      >
        <div
          data-stylename="logo"
          style={
            Object {
              "backgroundImage": "url(avatar.png)",
            }
          }
        />
        <div
          data-stylename="header-text"
        >
          <div
            data-stylename="header-contents"
          >
            <span
              data-stylename="header-name"
            >
              Spacebase
            </span>
            <div
              data-stylename="header-subtitle"
            >
              <Icon
                data-stylename="header-icon"
                name="Location"
              >
                <span
                  className="icon-Location"
                  data-stylename="icon"
                />
              </Icon>
              space, duh
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</StreamBanner>
`;
